Add css stylesheet, update the index and add a new image

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-</body>
+    <body>
+    <main>
+        <img src="">
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+    </main>
+    </body>
 </html>
