Update styles and index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
 </head>
     <body>
     <main>
-        <img src="">
+        <img class="home-soup" src="images/pexels-foodie-factor-539451.jpg">
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <p>A collection of recipes gathered by a person learning to program webpages. Enjoy</p>
+        <div class="recipes">
+            <ul>Recipes Available:</ul>
+                <li>
+                    <a href="./recipes/lasagna.html">Lasagna</a>
+                </li>
+                <li>
+                    <a href="">Peanut Butter Cookies</a>
+                </li>
+                <li>
+                    <a href="">Cucumber Salad</a>
+                </li>
+        </div>
     </main>
+    <footer>
+        <p>
+            To follow along and start your web development path. Check out 
+            <a href="https://www.theodinproject.com/dashboard">The Odin Project</a>.
+        </p>
+    </footer>
     </body>
 </html>
